[gd_scene load_steps=3 format=2]

[ext_resource path="res://Widget/Ability.gd" type="Script" id=1]
[ext_resource path="res://Styles/AbilityRow.tres" type="StyleBox" id=2]

[node name="Ability" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TriggerRow" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1440.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/TriggerRow"]
margin_right = 100.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
text = "Triggers : "
align = 2
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/TriggerRow"]
margin_left = 104.0
margin_right = 1440.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TriggerRow/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1334.0
margin_bottom = 12.0
columns = 12

[node name="ConditionRow" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1440.0
margin_bottom = 309.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/ConditionRow"]
margin_right = 100.0
margin_bottom = 291.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
text = "Conditions : "
align = 2
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ConditionRow"]
margin_left = 104.0
margin_right = 1440.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="TrueEffectRow" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 313.0
margin_right = 1440.0
margin_bottom = 604.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/TrueEffectRow"]
margin_right = 100.0
margin_bottom = 291.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
text = "Effect :
(if true)"
align = 2
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/TrueEffectRow"]
margin_left = 104.0
margin_right = 1440.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="FalseEffectRow" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 608.0
margin_right = 1440.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/FalseEffectRow"]
margin_right = 100.0
margin_bottom = 292.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
text = "Effect :
(if false)"
align = 2
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/FalseEffectRow"]
margin_left = 104.0
margin_right = 1440.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

